--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 
 spring.flyway.enabled=true
+
+api.security.token.secret=${JWS_SECRET:my_secret}
