🔧chore(pom.xml): adiciona H2 como dependência

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -6,11 +6,11 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.4.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>com.siso</groupId>
 	<artifactId>siso</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0-SISO</version>
 	<name>siso</name>
 	<description>Sistema Integrado de Saúde Odontólogica</description>
 	<url/>
@@ -80,6 +80,11 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
