--- a/.github/workflows/tests-pipeline.yml
+++ b/.github/workflows/tests-pipeline.yml
@@ -27,11 +27,9 @@ jobs:
           java-version: '23'
           distribution: 'temurin'
 
-      - name: Set permissions for Maven Wrapper
-        run: chmod +x ./mvnw
-
-      - name: Clear Maven Cache
-        run: ./mvnw clean install
-
-      - name: Run tests
-        run: ./mvnw test
+      - name: Build and test in backend folder
+        run: |
+          cd ./backend
+          chmod +x ./mvnw
+          ./mvnw clean install
+          ./mvnw test
