🔨refactor(workflows): re-define as branchs que disparam os workflows

--- a/.github/workflows/test-docker.yml
+++ b/.github/workflows/test-docker.yml
@@ -5,11 +5,11 @@ on:
     branches:
       - main
       - developer
-      - setup/docker
 
   pull_request:
     branches:
       - main
+      - developer
 
 jobs:
   build:
